Changed every link to be absolute and use correct location

--- a/.vscode/public_html/index.html
+++ b/.vscode/public_html/index.html
@@ -2,11 +2,11 @@
 <html>
 <head><meta charset="utf-8">
 	<title></title>
-	<link href="/CSSGametheory/css/index.css" rel="stylesheet" type="text/css" />
+	<link href="https://cssgametheory.com/CSSGametheory/css/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container">
-<div class="logo-container"><img alt="Logo" class="logo" src="/CSSGametheory/Img/logo.svg" /></div>
+<div class="logo-container"><img alt="Logo" class="logo" src="https://cssgametheory.com/CSSGametheory/Img/logo.svg" /></div>
 
 <div class="title">The College of St. Scholastica</div>
 
