--- a/HTML/StudentSignIn/gameLoading.html
+++ b/HTML/StudentSignIn/gameLoading.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="../../css/studentLoading.css">
+  <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentLoading.css">
 </head>
 <body>
   <!-- Heading -->
-  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="..\header.html"></iframe>
+  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
 
   <!-- Loading screen content -->
   <div class="loader-container">
