--- a/HTML/StudentSignIn/studentCreateProfile.html
+++ b/HTML/StudentSignIn/studentCreateProfile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../css/TeacherSignOn.css">
+    <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/TeacherSignOn.css">
     <title>Create a Profile</title>
     <script type="text/javascript">
         function validateForm() {
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="logo"></div>
         <h2>Create a Profile Student</h2>
-        <form method="POST" action="studentProfileCreated.html" onsubmit="return validateForm()" class="form">
+        <form method="POST" action="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/studentProfileCreated.html" onsubmit="return validateForm()" class="form">
             <div class="input-container">
                 <input type="email" id="email" name="email" required placeholder="Email">
             </div>
