--- a/HTML/StudentSignIn/studentEnterCode.html
+++ b/HTML/StudentSignIn/studentEnterCode.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="..\..\css\student.css">
-        <script src="..\..\javascript\createGame.js" defer></script> <!---makes sure the values are in localStorage--->
-    <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
+        <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/student.css">
+        <script src="https://cssgametheory.com/CSSGametheory/Javascript/createGame.js" defer></script> <!---makes sure the values are in localStorage--->
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     <body>
         <h1 id="gameHeader">{Game Name}</h1>
         <h2 id="gameName">Enter Code to Join Game Room</h2>
         <div id ="codeInput"> <!--- form --->
-            <form method = "POST" action="landingPage.html">
+            <form method = "POST" action="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/landingPage.html">
                 <input type="text" maxlength="6" size="12" id="gameCode" name="gameCode"> 
                 <br>
                 <p id="codeDashes">______</p>
