--- a/HTML/StudentSignIn/studentSignOn.html
+++ b/HTML/StudentSignIn/studentSignOn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../css/TeacherSignOn.css">
+        <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/TeacherSignOn.css">
 
         <script type="text/javascript">
             function submitForm() {
@@ -24,14 +24,14 @@
         <div class="container">
             <h2 id="signInHeader">Sign In</h2>
 
-            <form method="GET" action="studentWaitingRoom.html">
+            <form method="GET" action="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/studentWaitingRoom.html">
                 <div class="input-container">
                     <label for="Email" class="input-label">Email</label>
                     <input name="Email" id="Email" required>
                 </div>
 
                 <input type="submit" class="input" value="Submit" onclick="return submitForm()">
-                <a href="studentCreateProfile.html" class="menu">Create New Account</a>
+                <a href="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/studentCreateProfile.html" class="menu">Create New Account</a>
             </form>
         </div>
 
