--- a/HTML/StudentSignIn/studentWaitingRoom.html
+++ b/HTML/StudentSignIn/studentWaitingRoom.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centered Usernames</title>
-    <link rel="stylesheet" type="text/css" href="../../css/studentWaitingRoom.css">
+    <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/studentWaitingRoom.css">
 </head>
 <body>
-    <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="../header.html"></iframe>
+    <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     <div style="display: flex; justify-content: center; align-items: center; height: 20vh;">
         <div class="header">Students in Room</div>
     </div>
@@ -16,6 +16,6 @@
         <div class="column" id="usernameColumn"></div>
     </div>
 
-    <script src="../../javascript/studentWaitingRoom.js" defer></script> <!-- Link to your JavaScript file -->
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/studentWaitingRoom.js" defer></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
