--- a/HTML/TeacherSignInFolder/teacherCreateProfile.html
+++ b/HTML/TeacherSignInFolder/teacherCreateProfile.html
@@ -4,7 +4,7 @@ CreateAProfile
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/style.css">
     <title>Create a Profile</title>
     <script type="text/javascript">
         function validateForm() {
@@ -37,7 +37,7 @@ CreateAProfile
 <body>
     <div id="createProfile" style="width: 100%; height: 100%; position: relative">
         <h1>Create a Profile Student</h1>
-        <form method="POST" action="profileCreate.html" onsubmit="return validateForm()">
+        <form method="POST" action="https://cssgametheory.com/CSSGametheory/HTML/TeacherSignInFolder/teacherCreateProfile.html" onsubmit="return validateForm()">
             <div>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
