--- a/HTML/TeacherSignInFolder/teacherSignOn.html
+++ b/HTML/TeacherSignInFolder/teacherSignOn.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="../../css/TeacherSignOn.css">
+    <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/TeacherSignOn.css">
 </head>
 
 <body>
     <div class="container">
         <div class="logo"></div>
         <h2>The College of St. Scholastica</h2>
-        <form class="form" method="POST" action="../admin/teacherSelectGame.html">
+        <form class="form" method="POST" action="https://cssgametheory.com/CSSGametheory/HTML/admin/php/teacherSelectGame.php">
             <div class="input-container">
                 <input name="Email" id="Email" required placeholder="Email">
             </div>
@@ -25,7 +25,7 @@
             </div>
         </form>
         <div class="menu">
-            <a href="teacherCreateProfile.html">Create a profile</a>
+            <a href="https://cssgametheory.com/CSSGametheory/HTML/TeacherSignInFoler/teacherCreateProfile.html">Create a profile</a>
         </div>
     </div>
 </body>
