--- a/HTML/admin/allGames.html
+++ b/HTML/admin/allGames.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/admin.css">
-    <iframe scrolling="no" style="border:none;" width="100%" src="../../HTML/header.html"></iframe>
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/admin.css">
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
 </head>
 <body>
     <h1 id="gameHeader">All Games</h1>
@@ -37,13 +37,13 @@
     <!-- Navigation Links -->
     <table id="links">
         <tr>
-            <td><a href="allStudents.html">All Students</a></td>
-            <td><a href="index.html">Back to Home</a></td>
-            <td><a href="allGames.html">All Games</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allStudents.html">All Students</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html">Back to Home</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allGames.html">All Games</a></td>
         </tr>
     </table>
 
     <!-- Link to the new JavaScript file -->
-    <script src="../../JavaScript/fetchGameDates.js" defer></script>
+    <script src="https://cssgametheory.com/CSSGametheory/JavaScript/fetchGameDates.js" defer></script>
 </body>
 </html>
