--- a/HTML/admin/indexPart2.html
+++ b/HTML/admin/indexPart2.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../../css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/index.css">
 </head>
 
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="../../Img/logo.svg" class="logo" alt="Logo">
+            <img src="https://cssgametheory.com/CSSGametheory/Img/logo.svg" class="logo" alt="Logo">
         </div>
         <div class="title">The College of St. Scholastica</div>
         <div class="subtitle">Game Theory<br>Simulations</div>
