--- a/HTML/admin/redBlackView.html
+++ b/HTML/admin/redBlackView.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/gameView.css">
-    <script src="../../javascript/redBlackInfo.js" defer></script> <!-- Include the new JS file -->
-    <iframe scrolling="no" style="border:none;" width="100%" src="../../HTML/header.html"></iframe>
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/gameView.css">
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/redBlackInfo.js" defer></script> <!-- Include the new JS file -->
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
 </head>
 <body>
     <h1>Game (Red Card Black Card)</h1>
@@ -41,9 +41,9 @@
     <!-- Navigation Links -->
     <table id="links">
         <tr>
-            <td><a href="allStudents.html">All Students</a></td>
-            <td><a href="index.html">Back to Home</a></td>
-            <td><a href="allGames.html">All Games</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allStudents.html">All Students</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html">Back to Home</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allGames.html">All Games</a></td>
         </tr>
     </table>
 </body>
