--- a/HTML/admin/wheatSteelView.html
+++ b/HTML/admin/wheatSteelView.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/gameView.css">
-    <script src="../../javascript/gameRetrieve.js" defer></script>
-    <script src="../../javascript/gameView.js" defer></script> <!-- Include the new JS file -->
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/gameView.css">
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/gameRetrieve.js" defer></script>
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/gameView.js" defer></script> <!-- Include the new JS file -->
     <!---<script src="..\..\javascript\createGame.js" defer></script>---> <!-- test -->
 </head>
 <body>
-    <iframe scrolling="no" style="border:none;" width="100%" src="../../HTML/header.html"></iframe>
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     <h1 id="studentHeader_2">Game (<span id="gameName_2">Game Name</span>)</h1>
     <div id="gameInfo">
         Game Name: <span id="gameName_2">Game Name</span> <br>
@@ -47,19 +47,13 @@
     <br>
     <table id="links">
         <tr>
-            <td>
-                <a href="allStudents.html">All Students</a>
-            </td>
-            <td>
-                <a href="index.html">Back to Home</a> <!--admin index-->
-            </td>
-            <td>
-                <a href="allGames.html">All Games</a>
-            </td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allStudents.html">All Students</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html">Back to Home</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allGames.html">All Games</a></td>
         </tr>
     </table>
 </body>
 <footer>
-    <button onclick="window.location.href='studentResponseForm.html'">Submit Reflection</button>
+    <button onclick="window.location.href='https://cssgametheory.com/CSSGametheory/HTML/studentResponseForm.html'">Submit Reflection</button>
 </footer>
 </html>
