--- a/HTML/header.html
+++ b/HTML/header.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="..\css\header.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
 </head>
 
 <body>
     <div id="headerTop"></div>
-    <img src="..\img\logo.svg" id="logo">
+    <img src="https://cssgametheory.com/CSSGametheory/Img/logo.svg" id="logo">
     <div id="headerLeft"></div>
     <!---add other stuff here---->
 
@@ -16,7 +16,7 @@
         <table>
             <tr>
                 <td class="links">
-                    <a href="../HTML/admin/index.html" target="_blank">Game Theory</a>
+                    <a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html" target="_blank">Game Theory</a>
                 </td>
             </tr>
         </table>
