--- a/HTML/studentOliGame/studentOliGame.html
+++ b/HTML/studentOliGame/studentOliGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classroom Market Experiment</title>
-    <link rel="stylesheet" href="../../css/studentWSGameView.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentWSGameView.css">
 </head>
 <body>
     <div class="container">
@@ -48,6 +48,6 @@
             <ul id="roundResults"></ul>
         </div>
     </div>
-    <script src="../../javascript/oliGame.js"></script>
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/oliGame.js"></script>
 </body>
 </html>
