--- a/HTML/studentRedBlack/studentPartnerResult.html
+++ b/HTML/studentRedBlack/studentPartnerResult.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="../../css/studentRedBlack.css">
+  <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentRedBlack.css">
 </head>
 <body>
-  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="..\header.html"></iframe>
+  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     
   <!--- fix positioning with CSS --->
     <div id="results">
@@ -29,10 +29,10 @@
             <!--- might be difficult to display different image depending on round info-->
             <tr>
                 <td class="card">
-                    <img src="..\..\img\kingHearts.svg" id="youPlayed">
+                    <img src="https://cssgametheory.com/CSSGametheory/Img/kingHearts.svg" id="youPlayed">
                 </td>
                 <td class="card">
-                    <img src="..\..\img\kingSpades.svg" id="partnerPlayed">
+                    <img src="https://cssgametheory.com/CSSGametheory/Img/kingSpades.svg" id="partnerPlayed">
                 </td>
             </tr>
         </table>
