--- a/HTML/studentWheatSteel/studentWheatSteelGameView.html
+++ b/HTML/studentWheatSteel/studentWheatSteelGameView.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wheat and Steel</title>
-    <link rel="stylesheet" href="../../css/studentWSGameView.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentWSGameView.css">
 </head>
 <body>
 
@@ -36,11 +36,11 @@
             <h3>Production:</h3>
             <label for="wheatAmount">Wheat to produce (units):</label>
             <input type="number" id="wheatAmount" min="0" value="0">
-            <img src="../../Img/wheat.jpg" alt="Wheat" class="resource-img">
+            <img src="https://cssgametheory.com/CSSGametheory/Img/wheat.jpg" alt="Wheat" class="resource-img">
             <br>
             <label for="steelAmount">Steel to produce (units):</label>
             <input type="number" id="steelAmount" min="0" value="0">
-            <img src="../../Img/steel.jpg" alt="Steel" class="resource-img">
+            <img src="https://cssgametheory.com/CSSGametheory/Img/steel.jpg" alt="Steel" class="resource-img">
             <br>
             <p>Time Spent: <span id="timeSpent">0</span> hours</p>
             <button id="produceButton">Produce</button>
@@ -68,6 +68,6 @@
     </div>
 </div>
 
-<script src="../../javascript/wheatSteelGame.js" defer></script>
+<script src="https://cssgametheory.com/CSSGametheory/Javascript/wheatSteelGame.js" defer></script>
 </body>
 </html>
