--- a/HTML/teacherViews/teacherSelectGame.html
+++ b/HTML/teacherViews/teacherSelectGame.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../../css/teacherGameSelect.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/teacherGameSelect.css">
     <script>
         function redirectToLoading(url) {
     window.location.href = url;
@@ -17,15 +17,15 @@
         <div class="select-game">Select Game</div>
         <div class="button-container">
             <div class="game-wrapper">
-                <img src="../../Img/RedCardBlackCard.jpeg" alt="Red Card Black Card" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <img src="https://cssgametheory.com/CSSGametheory/Img/RedCardBlackCard.jpeg" alt="Red Card Black Card" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
                 <h3>Red Card Black Card</h3>
             </div>
             <div class="game-wrapper">
-                <img src="../../Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <img src="https://cssgametheory.com/CSSGametheory/Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
                 <h3>Wheat And Steel</h3>
             </div>
             <div class="game-wrapper">
-                <img src="../../Img/OligopolySmall.jpg" alt="Oligopoly" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <img src="https://cssgametheory.com/CSSGametheory/Img/OligopolySmall.jpg" alt="Oligopoly" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
                 <h3>Oligopoly</h3>
             </div>
         </div>
