--- a/HTML/teacherViews/teacherViewResponsesRedBlack.html
+++ b/HTML/teacherViews/teacherViewResponsesRedBlack.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher View Responses</title>
-    <link rel="stylesheet" href="teacherViewResponsesRedBlack.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/teacherViewResponsesRedBlack.css">
 </head>
 <body>
     <div id="container">
