--- a/HTML/teacherViews/teacherViewResults.html
+++ b/HTML/teacherViews/teacherViewResults.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../../css/teacherViewResult.css">
-    <script src="../../javascript/teacherView.js" defer></script> <!-- Include the new JS file -->
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/teacherViewResult.css">
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/teacherView.js" defer></script> <!-- Include the new JS file -->
 </head>
 
 <body>
     <div id="container">
         <!-- Heading -->
-        <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="../header.html"></iframe>
+        <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
         <div class="box1"></div>
         <div class="box2">Game ()</div>
         <div class="box3"></div>
