--- a/HTML/teacherViews/wheatSteelTeacherView.html
+++ b/HTML/teacherViews/wheatSteelTeacherView.html
@@ -70,13 +70,13 @@
     <table id="links">
         <tr>
             <td>
-                <a href="allStudents.html">All Students</a>
+                <a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allStudents.html">All Students</a>
             </td>
             <td>
-                <a href="index.html">Back to Home</a> <!--admin index-->
+                <a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html">Back to Home</a> <!--admin index-->
             </td>
             <td>
-                <a href="allGames.html">All Games</a>
+                <a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allGames.html">All Games</a>
             </td>
         </tr>
     </table>
