--- a/HTML/StudentSignIn/studentProfileCreated.html
+++ b/HTML/StudentSignIn/studentProfileCreated.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../../css/header.css">
-        <link rel="stylesheet" href="../../css/createProfile.css">
-        <script src="../../JavaScript/createProfile.js" defer></script>
-        <script src="../../JavaScript/studentSignOn.js" defer></script>
+        <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+        <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/createProfile.css">
+        <script src="https://cssgametheory.com/CSSGametheory/JavaScript/createProfile.js" defer></script>
+        <script src="https://cssgametheory.com/CSSGametheory/JavaScript/studentSignOn.js" defer></script>
     </head>
-    <iframe scrolling="no" style="border:none;" width="100%" src="../header.html"></iframe>
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     <body>
         <div id="createSuccess">
             Profile Created!
@@ -22,7 +22,7 @@
                 Email:
             </p>
         </div>
-        <button id="studentSignOn"  onclick="window.location.href='studentSignOn.html';">
+        <button id="studentSignOn"  onclick="window.location.href='https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/studentSignOn.html';">
             Sign In
         </button>
     </body>
