--- a/HTML/TeacherSignInFolder/teacherProfileCreated.html
+++ b/HTML/TeacherSignInFolder/teacherProfileCreated.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../../css/header.css">
-        <link rel="stylesheet" href="../../css/createProfile.css">
-        <script src="../../javascript/createProfile.js" defer></script>
-        <script src="../../javascript/studentSignOn.js" defer></script>
+        <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+        <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/createProfile.css">
+        <script src="https://cssgametheory.com/CSSGametheory/Javascript/createProfile.js" defer></script>
+        <script src="https://cssgametheory.com/CSSGametheory/Javascript/studentSignOn.js" defer></script>
     </head>
     <iframe scrolling="no" style="border:none;" width="100%" src="header.html"></iframe>
     <body>
