--- a/HTML/admin/index.html
+++ b/HTML/admin/index.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../../css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://cssgametheory.com/CSSGametheory/css/index.css">
 </head>
 
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="../../Img/logo.svg" class="logo" alt="Logo">
+            <img src="https://cssgametheory.com/CSSGametheory/Img/logo.svg" class="logo" alt="Logo">
         </div>
         <div class="title">The College of St. Scholastica</div>
         <div class="subtitle">Game Theory<br>Simulations</div>
-        <a class="button" href="indexPart2.html">Start</a>
+        <a class="button" href="https://cssgametheory.com/CSSGametheory/HTML/indexPart2.html">Start</a>
     </div>
 </body>
 
