--- a/HTML/admin/redBlackPairView.html
+++ b/HTML/admin/redBlackPairView.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/admin.css">
-    <script src="../../JavaScript/redBlackGame.js" defer></script> <!-- Include the new JS file -->
-    <iframe scrolling="no" style="border:none;" width="100%" src="../../HTML/header.html"></iframe>
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/header.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/admin.css">
+    <script src="https://cssgametheory.com/CSSGametheory/JavaScript/redBlackGame.js" defer></script> <!-- Include the new JS file -->
+    <iframe scrolling="no" style="border:none;" width="100%" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
 </head>
 <body>
     <h1 id="studentHeader">Pair (<span id="headerPlayerOne">Susan</span> & <span id="headerPlayerTwo">Bob</span>)</h1>
@@ -30,9 +30,9 @@
     <!-- Navigation Links -->
     <table id="links">
         <tr>
-            <td><a href="allStudents.html">All Students</a></td>
-            <td><a href="index.html">Back to Home</a></td>
-            <td><a href="allGames.html">All Games</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allStudents.html">All Students</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/index.html">Back to Home</a></td>
+            <td><a href="https://cssgametheory.com/CSSGametheory/HTML/admin/allGames.html">All Games</a></td>
         </tr>
     </table>
 </body>
