--- a/HTML/admin/studentResponseForm.html
+++ b/HTML/admin/studentResponseForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Response Form</title>
-    <link rel="stylesheet" href="studentResponseForm.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentResponseForm.css">
 </head>
 <body>
     <div id="container">
