--- a/HTML/admin/testing.html
+++ b/HTML/admin/testing.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Socket.IO Test</title>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/JavaScript/testing.js"></script>
+<script src="https://cssgametheory.com/CSSGametheory/JavaScript/testing.js"></script>
 <style>
   #chat {
     background-color: #f9f9f9;
