--- a/HTML/studentOliGame/teacherOliGame.html
+++ b/HTML/studentOliGame/teacherOliGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oligopoly Game</title>
-    <link rel="stylesheet" href="../../css/oliTeacherGameView.css">
+    <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/oliTeacherGameView.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,6 +48,6 @@
         </section>
     </main>
 
-    <script src="../../javascript/oliGameTeacherView.js"></script>
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/oliGameTeacherView.js"></script>
 </body>
 </html>
