--- a/HTML/studentRedBlack/studentCardSelect.html
+++ b/HTML/studentRedBlack/studentCardSelect.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="../../css/studentRedBlack.css">
+  <link rel="stylesheet" href="https://cssgametheory.com/CSSGametheory/css/studentRedBlack.css">
 </head>
 <body>
-  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="..\header.html"></iframe>
+  <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="https://cssgametheory.com/CSSGametheory/HTML/header.html"></iframe>
     
   <!--- needs click functionality; form? --->
     <div id="cards">
         <h1><u>Select a Card:</u></h1>
         <!--- the wireframes have an off-white filter over the cards --->
-        <img src="..\..\img\kingHearts.svg" id="kingHearts">
+        <img src="https://cssgametheory.com/CSSGametheory/Img/kingHearts.svg" id="kingHearts">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="..\..\img\kingSpades.svg" id="kingSpades">
+        <img src="https://cssgametheory.com/CSSGametheory/Img/kingSpades.svg" id="kingSpades">
         <br>
         <!--- attach these spans to a hover tooltip on the images --->
         <span id="redPoints">Gives <u>you</u> 50 points</span>
