--- a/HTML/studentWheatSteel/studentWheatSteelResults.html
+++ b/HTML/studentWheatSteel/studentWheatSteelResults.html
@@ -97,6 +97,6 @@
         <a href="https://cssgametheory.com/CSSGametheory/HTML/StudentSignIn/php/studentSignOn.php" class="back-btn">Return to Lobby</a>
     </div>
 
-    <script src="../../javascript/wheatSteelGame.js" defer></script>
+    <script src="https://cssgametheory.com/CSSGametheory/Javascript/wheatSteelGame.js" defer></script>
 </body>
 </html>
